servers/mariadb/test-mariadb-server/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mariadb
  labels:
    name: mariadb
    purpose: holmes-testing
